--- a/RAG/Dockerfile
+++ b/RAG/Dockerfile
@@ -7,6 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-EXPOSE 8001
+EXPOSE 8000
 
-CMD ["uvicorn", "main_api:app", "--host", "0.0.0.0", "--port", "8001", "--reload", "--workers", "1"]
+CMD ["uvicorn", "RAG_api:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--workers", "1"]
