added production urls to nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,8 @@ http {
 
         # Proxy API requests to backend
         location /answer {
-            proxy_pass http://resume-backend:8001/answer;
+            # proxy_pass http://resume-backend:8001/answer;
+            proxy_pass https://resume-bot-backend-api.onrender.com;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,7 +16,8 @@ http {
 
         # Proxy all other requests to frontend
         location / {
-            proxy_pass http://resume-frontend:3000;
+            # proxy_pass http://resume-frontend:3000;
+            proxy_pass https://resume-bot-frontend1.onrender.com;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
