--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,9 +64,9 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - resume-frontend
-      - resume-backend
+    # depends_on:
+    #   - resume-frontend
+    #   - resume-backend
 
 
 # Optional volumes - remove if not used
