--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     #   - llm
     environment:
       - OLLAMA_BASE_URL=http://llm:11434
+      - APP_ENV=development
     restart: unless-stopped
     volumes:
       - ./backend:/app
