added prefix NEXT_PUBLIC to URLs in .env to work with Next.js

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -3,3 +3,10 @@ FRONTEND_URL=http://localhost:3000
 RAG_URL=http://localhost:8000
 RAG_SERVICE_URL=http://rag:8000/answer
 LLM_URL=http://localhost:11434
+
+
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8001
+NEXT_PUBLIC__FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC__RAG_URL=http://localhost:8000
+NEXT_PUBLIC__RAG_SERVICE_URL=http://rag:8000/answer
+NEXT_PUBLIC__LLM_URL=http://localhost:11434
