--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,12 @@
-BACKEND_URL=https://resume-bot-backend-api.onrender.com/
-FRONTEND_URL=https://resume-bot-frontend1.onrender.com/
-RAG_URL=https://resume-bot-rag-api.onrender.com/
+BACKEND_URL=https://resume-bot-backend-api.onrender.com
+FRONTEND_URL=https://resume-bot-frontend1.onrender.com
+RAG_URL=https://resume-bot-rag-api.onrender.com
 LLM_URL=https://resume-bot-nginx.onrender.com
 RAG_SERVICE_URL=https://resume-bot-rag-api.onrender.com/answer
+
+
+NEXT_PUBIC_BACKEND_URL=https://resume-bot-backend-api.onrender.com
+NEXT_PUBIC_FRONTEND_URL=https://resume-bot-frontend1.onrender.com
+NEXT_PUBIC_RAG_URL=https://resume-bot-rag-api.onrender.com
+NEXT_PUBIC_LLM_URL=https://resume-bot-nginx.onrender.com
+NEXT_PUBIC_RAG_SERVICE_URL=https://resume-bot-rag-api.onrender.com/answer
