--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,4 +5,6 @@ RUN npm install
 COPY . .
 RUN npm run build
 EXPOSE 3000
-CMD ["npm", "run", "dev"]
+
+# CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start"]
