added start.sh to serve and pull olamma mistral model

--- a/LLM/Dockerfile
+++ b/LLM/Dockerfile
@@ -1,11 +1,10 @@
-# Use Ollama's official base image
 FROM ollama/ollama:latest
 
-# Optional: pre-download a model (e.g., mistral, llama2, gemma)
-# Comment this line if you prefer to load the model later manually
-RUN ollama pull mistral
+# Copy startup script
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
 
-# Expose the default Ollama API port
 EXPOSE 11434
 
-# Ollama runs its server by default, so no CMD override is needed
+# Run startup script (serve + pull + stay alive)
+CMD ["/start.sh"]
