update llm Dockerfile

--- a/LLM/Dockerfile
+++ b/LLM/Dockerfile
@@ -1,10 +1,14 @@
 FROM ollama/ollama:latest
 
-# Copy startup script
+# Copy your startup script
 COPY start.sh /start.sh
 RUN chmod +x /start.sh
 
+# Expose Ollama API port
 EXPOSE 11434
 
-# Run startup script (serve + pull + stay alive)
+# Override ENTRYPOINT so CMD runs as-is
+ENTRYPOINT []
+
+# Run your startup script
 CMD ["/start.sh"]
