--- a/nginx_llm/nginx.conf
+++ b/nginx_llm/nginx.conf
@@ -11,8 +11,7 @@ http {
         listen 80;
 
         # 🔐 Enable Basic Auth for the whole server (optional)
-        # auth_basic "Restricted Area";
-        # auth_basic_user_file /etc/nginx/.htpasswd;
+ 
 
         # ➤ Proxy API requests to backend
         location /api {
@@ -25,6 +24,9 @@ http {
 
         # ➤ Proxy requests to local Ollama instance
         location /ollama/ {
+            auth_basic "Restricted Area";
+            auth_basic_user_file /etc/nginx/.htpasswd;
+
             limit_req zone=api_limit burst=5 nodelay;
             limit_conn conn_limit_per_ip 10;
 
