--- a/nginx_llm/nginx.conf
+++ b/nginx_llm/nginx.conf
@@ -39,11 +39,21 @@ http {
 
         # ➤ Proxy all other requests to frontend
         location / {
+            # return 200 "Welcome to the Resume Bot! Use /api for backend and /ollama/ for Ollama API.";
             proxy_pass https://resume-bot-frontend1.onrender.com;
-            proxy_set_header Host $host;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+
+            
+            # proxy_set_header Host $host;
+            proxy_set_header Host resume-bot-frontend1.onrender.com;
+
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_set_header User-Agent "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36";
+
         }
     }
 }
