--- a/nginx_llm/nginx.dev.conf
+++ b/nginx_llm/nginx.dev.conf
@@ -1,21 +1,15 @@
 events {}
 
 http {
-    # Limit each IP to 1 request per second, with a burst of 5 allowed
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=1r/s;
-
-    # Limit max 10 concurrent connections per IP
     limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
 
     server {
         listen 80;
 
-        # 🔐 Enable Basic Auth for the whole server (optional)
- 
-
         # ➤ Proxy API requests to backend
         location /api {
-            proxy_pass {$BACKEND_URL};
+            proxy_pass localhost:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,7 +24,6 @@ http {
             limit_req zone=api_limit burst=5 nodelay;
             limit_conn conn_limit_per_ip 10;
 
-            # Internally hosted Ollama (running at 11434)
             proxy_pass http://localhost:11434/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -39,21 +32,14 @@ http {
 
         # ➤ Proxy all other requests to frontend
         location / {
-            # return 200 "Welcome to the Resume Bot! Use /api for backend and /ollama/ for Ollama API.";
-            proxy_pass {$FRONTEND_URL};
-            proxy_ssl_server_name on;
-            proxy_ssl_verify off;
+            proxy_pass localhost:3000;
 
-            
-            # proxy_set_header Host $host;
-            proxy_set_header Host resume-bot-frontend1.onrender.com;
-
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
             proxy_set_header User-Agent "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36";
-
         }
 
         location /test {
