--- a/nginx_llm/supervisord.conf
+++ b/nginx_llm/supervisord.conf
@@ -1,10 +1,12 @@
-# This lets you run both ollama serve and nginx in one container:
-
 [supervisord]
 nodaemon=true
 
 [program:ollama]
 command=/bin/bash -c "ollama serve"
+autostart=true
+autorestart=true
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
+autostart=true
+autorestart=true
