--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,24 +50,47 @@ services:
       context: ./frontend
     container_name: resume-frontend
     ports:
-      - "3000:80"
+      - "3000:3000"   # map host:container
     restart: unless-stopped
     environment:
-      - PORT=80
+      # - PORT=80
       - NODE_ENV=development
       - CHOKIDAR_USEPOLLING=true
     volumes:
       - ./frontend:/app
       - /app/node_modules
-  nginx:
-    image: nginx:alpine
+    command: ["npm", "run", "dev"]   # Override CMD here for dev hot reload
+
+
+  # nginx:
+  #   image: nginx:alpine
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #   # depends_on:
+  #   #   - resume-frontend
+  #   #   - resume-backend
+
+  nginx_llm:
+    build:
+      context: ./nginx_llm
+      dockerfile: Dockerfile
+
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    # depends_on:
-    #   - resume-frontend
-    #   - resume-backend
+    - ./nginx_llm/nginx.dev.conf:/etc/nginx/nginx.conf:ro
+
+    healthcheck:
+      test: >
+        curl --fail --silent http://localhost:11434/api/generate 
+        -H "Content-Type: application/json" 
+        -d '{"model":"mistral","prompt":"ping","stream":false}' 
+        | grep -q '"done":true'
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 
 # Optional volumes - remove if not used
