--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^12.23.6",
+    "leaflet": "^1.9.4",
+    "lottie-react": "^2.4.1",
     "next": "^14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "^4.2.1",
+    "react-tsparticles": "^2.2.3",
+    "tsparticles": "^2.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "24.0.14",
+    "@types/react": "19.1.8",
+    "typescript": "5.8.3"
   }
 }
